--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>site CSS</title>
 </head>
 <body>
+  <article class="cartao">
+     <div class="cartao_conteudo">
+     <h1>Programação></h1>
+     <div class="cartao_conteudo_pergunta">
+       <p>O que é CSS? </p>
+    </div>
+    <div class="cartao_conteudo_resposta">
+      O CSS é uma linguagem de estilização
+    </div>
+
+
+    </div>
+
+
+
+  </article> 
     
+
+
 </body>
 </html>
