--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <div class="cartao_conteudo_resposta">
       O CSS é uma linguagem de estilização
     </div>
-
-
-    </div>
-
-
+    
+  
+  </div>
+  
+  <footer>
+    <p>Amanda Lorhayne Martins De oliveira </p>
+  </footer>
 
   </article> 
     
